objects/Account.object
<CustomObject>
    <fields>
        <fullName>SCP_Certa_GC__cliente_formula__c</fullName>
        <formula>TEXT(SCP_Certa_GC__Numero_de_Cliente__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numero de Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__idClienteLegado__c</fullName>
        <label>Id Cliente Legado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOutboundSMSLastTryDate__c</fullName>
        <description>Sales Outbound SMS Last Try Date</description>
        <inlineHelpText>Sales Outbound SMS Last Try Date</inlineHelpText>
        <label>Sales Outbound SMS Last Try Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SalesOutboundSMSLastTryNumber__c</fullName>
        <description>Sales Outbound SMS Last Try Number</description>
        <inlineHelpText>Sales Outbound SMS Last Try Number</inlineHelpText>
        <label>Sales Outbound SMS Last Try Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesOutboundSMSValidatedDate__c</fullName>
        <label>SalesOutboundSMSValidatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SalesOutboundSMS__c</fullName>
        <description>Sales Outbound SMS</description>
        <inlineHelpText>Sales Outbound SMS</inlineHelpText>
        <label>Sales Outbound SMS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SegmentDate__c</fullName>
        <description>#Marketing #Sprint15 campo que almacena la fecha de calculo de segmentación del BI</description>
        <label>BI Segment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SegmentLevel1__c</fullName>
        <label>Segment Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SegmentLevel1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SegmentLevel2__c</fullName>
        <label>Segment Level 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SegmentLevel2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SegmentUniqueCode__c</fullName>
        <description>#MarketingTeam #Sprint08
Unique code identifier for segment level combination</description>
        <label>Segment Unique Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingAddressStore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ShippingAddressStore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Shipping Address based on Address2 model</description>
        <label>Shipping Address</label>
        <referenceTo>Address2__c</referenceTo>
        <relationshipLabel>Accounts (Shipping Address)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SocialPlan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>#MarketingTeam #Sprint08
Indicates if the account receives a social plan.</description>
        <label>Social Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strategic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>#MarketingTeam #Sprint13
Indicates if the accounts contact is strategic.</description>
        <label>Strategic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaxCondition__c</fullName>
        <description>Este campo se debe eliminar</description>
        <label>TaxCondition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CF</fullName>
                </value>
                <value>
                    <fullName>RS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TelecomEmployee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>#MarketingTeam #Sprint08
Indicates if the account belongs to a Telecom employee</description>
        <label>Group Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TelecomExEmployee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>#MarketingTeam #Sprint08
Indicates if the account belongs to a Telecom ex-employee</description>
        <label>Group ex-Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UnnamedCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marca de cliente no nominado</description>
        <label>Unnamed Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserLevel__c</fullName>
        <label>User Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Mid</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>#MarketingTeam #Sprint08
Indicates if the account is VIP.</description>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValidatedBillingAddress__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Validated Billing Address</description>
        <inlineHelpText>Validated Billing Address</inlineHelpText>
        <label>Validated Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValidatedShippingAddress__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Validated Shipping Address</description>
        <inlineHelpText>Validated Shipping Address</inlineHelpText>
        <label>Validated Shipping Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountPaymentType__c</fullName>
        <label>Account Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prepaid</fullName>
                </value>
                <value>
                    <fullName>Postpaid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AutoPaymentAmount__c</fullName>
        <label>Auto Payment Amount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Balance</fullName>
                </value>
                <value>
                    <fullName>Minimum Due</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AutoPaymentCardType__c</fullName>
        <formula>TEXT(vlocity_cmt__AutoPaymentMethodId__r.vlocity_cmt__CardType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Payment Card Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AutoPaymentMethodId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auto Payment Method</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>vlocity_cmt__PaymentMethod__c.vlocity_cmt__AccountId__r.Id</valueField>
            </filterItems>
            <filterItems>
                <field>vlocity_cmt__PaymentMethod__c.vlocity_cmt__IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_cmt__PaymentMethod__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>AutoPaymentMethod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillDeliveryMethod__c</fullName>
        <label>Bill Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paper Billing</fullName>
                </value>
                <value>
                    <fullName>Electronic Statements Online</fullName>
                </value>
                <value>
                    <fullName>eMail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillFrequency__c</fullName>
        <label>Bill Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillingEmailAddress__c</fullName>
        <label>Billing eMail Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CLTV__c</fullName>
        <description>CLTV or customer lifetime value is a monetary amount indicating the total value of this customer since the beginning of the customer&apos;s relationship with your organization.</description>
        <inlineHelpText>Client Lifetime Value</inlineHelpText>
        <label>CLTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CalculatedAddress__c</fullName>
        <formula>BillingStreet &amp; BR() &amp; BillingCity &amp; &quot; &quot; &amp; BillingState &amp; &quot; &quot; &amp; BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Churn__c</fullName>
        <label>Churn</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContactPreferences__c</fullName>
        <description>The preferred method (or methods) of communications to the parties of this account such as mail, email or phone.</description>
        <label>Contact Preferences</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                    <label>Teléfono</label>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>eMail</fullName>
                    <label>Correo electrónico</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomerValue__c</fullName>
        <label>Customer Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diamond</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DateFounded__c</fullName>
        <label>Date Founded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DirectoryListed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Directory Listed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Disclosure1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foreign Exchange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Disclosure2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gaming or Gambling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Disclosure3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Money Lending/Pawning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EnableAutopay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Autopay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsPersonAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Person Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsRootResolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Root Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LegalForm__c</fullName>
        <label>Legal Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>LLP</fullName>
                </value>
                <value>
                    <fullName>Not for Profit</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NetWorth__c</fullName>
        <label>Net Worth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NumberofLocations__c</fullName>
        <description>The number of locations for this account. For informational purposes only.</description>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The identity of the party who is the customer or prospect of this account.</description>
        <label>Party</label>
        <referenceTo>vlocity_cmt__Party__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PersonContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For consumer accounts where the customer is a person, this field identifies the person who is considered the customer. If the Salesforce Person Accounts feature is used, this field is optional, but would logically point to the contact record built into the Person Account.</description>
        <label>Person Contact Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Person Accounts</relationshipLabel>
        <relationshipName>PersonAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PrimaryContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary person to contact with any business related to this account. If the customer is a consumer, the primary contact may also be the customer but need not be. For example, the customer&apos;s assistant or spouse may be identified as the desired primary contact.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RootAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SLA__c</fullName>
        <description>DEPRECATED. Use vSLA.</description>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>The status of the customer&apos;s account such as active, inactive, suspended, pending or expired.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TaxID__c</fullName>
        <label>Tax ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__vCustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__vSLAExpirationDate__c</fullName>
        <description>The expiration date of the current service level agreement.</description>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__vSLASerialNumber__c</fullName>
        <description>The agreement serial number that identifies the current service level agreement.</description>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__vSLA__c</fullName>
        <description>The service level agreement for this account which defines the level of service provided to the account with values such as gold, silver or bronze. The values are entirely customizable.</description>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>DocumentNumber__c</columns>
        <columns>SCP_Certa_GC__CUIT__c</columns>
        <columns>CuitNumber__c</columns>
        <columns>UnnamedCustomer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>vlocity_cmt__Active__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>DocumentNumber__c</columns>
        <columns>SCP_Certa_GC__CUIT_Formula__c</columns>
        <columns>SCP_Certa_GC__CUIT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Andres Care</value>
        </filters>
        <label>Prueba Care</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Clientes_repro</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Repro hhCdk</value>
        </filters>
        <label>Clientes repro</label>
        <language>es_MX</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>vlocity_cmt__PrimaryContactId__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Nuevos de esta semana</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Repro</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Wholesale</value>
        </filters>
        <label>Wholesale</label>
        <language>es_MX</language>
    </listViews>
    <listViews>
        <fullName>SCP_Certa_GC__Mis_cuentas_SCP</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Team</filterScope>
        <label>Mis cuentas SCP</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Tech</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Tech</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>marco polo</value>
        </filters>
        <label>Tech</label>
        <language>es_MX</language>
    </listViews>
    <listViews>
        <fullName>Todas_las_cuentas</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todas las cuentas</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Todas_las_cuentas2</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>vlocity_cmt__PrimaryContactId__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Amelie Smith</value>
        </filters>
        <label>Filtro Vic</label>
        <language>es_MX</language>
    </listViews>
    <listViews>
        <fullName>Vista_Marketing1</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PersonalClubCategory__c</columns>
        <columns>PersonalClubPoints__c</columns>
        <columns>vlocity_cmt__PrimaryContactId__c</columns>
        <columns>ACCOUNT.IS_PARNTER</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Marketing</value>
        </filters>
        <label>Vista Marketing</label>
        <language>es_MX</language>
    </listViews>
    <listViews>
        <fullName>Vista_Tech3</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY_CODE</columns>
        <columns>PARENT_NAME</columns>
        <columns>DocumentNumber__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Tech</value>
        </filters>
        <label>Vista Tech</label>
        <language>es_MX</language>
    </listViews>
    <listViews>
        <fullName>cuenta_integrada_de_flor</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>NominaC</value>
        </filters>
        <label>cuenta integrada de flor</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>vista_de_flor</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Attribute__c</columns>
        <columns>Attributes__c</columns>
        <columns>vlocity_cmt__Active__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>PARENT_NAME</columns>
        <columns>PersonalClubPoints__c</columns>
        <columns>PersonalClubCategory__c</columns>
        <columns>DocumentNumber__c</columns>
        <columns>ClubMember__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_cmt__Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>vista de flor</label>
        <language>es</language>
    </listViews>
    <recordTypes>
        <fullName>Internal_Channel</fullName>
        <active>true</active>
        <description>Record type to register the internal divisions of TECO.</description>
        <label>Internal Channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner</fullName>
        <active>true</active>
        <description>Record type to register the Partners of TECO.</description>
        <label>Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>SCP</fullName>
        <active>true</active>
        <description>Utilizado para los perfiles que deban crear cuentas usadas para SCP</description>
        <label>SCP</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Billing</fullName>
        <active>true</active>
        <description>Use a billing account to add an alternate billing profile to a business account, consumer account or billing aggregator account.</description>
        <label>Billing</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__BillingAggregator</fullName>
        <active>true</active>
        <description>Use a billing aggregator account for large business customers to organize multiple sets of billing accounts in a billing account hierarchy.</description>
        <label>Billing Aggregator</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Business</fullName>
        <active>true</active>
        <description>Use business accounts for customers that are businesses, organizations or other public or private agencies.</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Consumer</fullName>
        <active>true</active>
        <description>Use consumer accounts for customers who are individual consumers, families or small office/home offices.</description>
        <label>Consumer</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__MobilePhoneAccount</fullName>
        <active>true</active>
        <label>MobilePhoneAccount</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Other</fullName>
        <active>true</active>
        <description>Use other accounts for organizations that are not a customer.</description>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Service</fullName>
        <active>true</active>
        <description>Use service accounts to add an additional service location to a business account, consumer account or service aggregator account.</description>
        <label>Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__ServiceAggregator</fullName>
        <active>true</active>
        <description>Use a service aggregator account for large business customers to organize multiple sets of service locations in a service account hierarchy.</description>
        <label>Service Aggregator</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Attributes_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Press__c &amp;&amp; SocialPlan__c,
Press__c &amp;&amp; TelecomEmployee__c,
Retired__c &amp;&amp; SocialPlan__c,
Retired__c &amp;&amp; TelecomEmployee__c,
Retired__c &amp;&amp; Minor__c,
Retired__c &amp;&amp; Strategic__c,
SocialPlan__c &amp;&amp; TelecomEmployee__c,
SocialPlan__c &amp;&amp; Minor__c,
SocialPlan__c &amp;&amp; Strategic__c,
TelecomExEmployee__c &amp;&amp; TelecomEmployee__c,
TelecomExEmployee__c &amp;&amp; Minor__c,
TelecomExEmployee__c &amp;&amp; Strategic__c,
TelecomEmployee__c &amp;&amp; Minor__c,
TelecomEmployee__c &amp;&amp; Strategic__c,
Strategic__c &amp;&amp; Influencer__c)</errorConditionFormula>
        <errorMessage>Invalid attributes combination</errorMessage>
    </validationRules>
</CustomObject>